--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   }
