feat(onboarding): add onboarding components and API services
- Implemented onboarding components including AssetAllocation, BackgroundVerification, CandidateDocumentManager, and others.
- Created API service for candidate onboarding with functions for CRUD operations, document management, and sending invites.
- Added routing for onboarding features.
- Developed feeds API for managing company feeds with like and bookmark functionalities.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Duplicate/temporary files in the onboarding feature
+src/features/onboarding/CandidateUploads.clean.tsx
+src/features/onboarding/CandidateUploads.final.tsx
+src/features/onboarding/CandidateUploads.fixed.tsx
+src/features/onboarding/CandidateUploads.new.tsx
+src/features/onboarding/CandidateUploads.tsx.new
+src/features/onboarding/CandidateUploadsFixed.tsx
+src/features/onboarding/CandidateUploadsRefactored.tsx
+src/features/onboarding/clean-CandidateUploads.tsx
+src/features/onboarding/CandidateUploads.tsx
