Refactor LeaveBalance component and API service
- Updated LeaveBalance component to improve code readability and maintainability by standardizing quotation marks and removing mock data.
- Enhanced leaveApi service to require authentication tokens for leave requests and balances.
- Modified LeaveBalance type to include employee information and updated field names for clarity.
- Improved error handling for API calls by ensuring tokens are provided.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.marscode/
+.playwright/
 node_modules
 dist
 dist-ssr
@@ -22,7 +23,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
+easwar/
 # Duplicate/temporary files in the onboarding feature
 src/features/onboarding/CandidateUploads.clean.tsx
 src/features/onboarding/CandidateUploads.final.tsx
