feat: Implement attendance feature with sidebar navigation and employee dashboard
- Added AttendanceContent component to display employee dashboard.
- Created EmployeeSpecificSidebar component for employee navigation.
- Updated AppRouter to include routes for attendance and employee profile.
- Integrated ProtectedRoute for secure access to onboarding and attendance features.

--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ VITE_USE_MOCK=false
 
 # Mock Server URLs
 VITE_MOCK_API_URL=http://192.168.1.117:5000/api
-VITE_MOCK_SERVER_PORT=3000
+VITE_MOCK_SERVER_PORT=3002
 
 # Backend Server URLs
-VITE_BACKEND_BASE_URL=http://192.168.1.117:5000/api
+VITE_BACKEND_BASE_URL=http://192.168.1.117:5000
 VITE_BACKEND_API_URL=http://192.168.1.117:5000/api
 
 # Alternative localhost URLs for development
-VITE_LOCALHOST_API_URL=http://192.168.1.117:5000/api
+VITE_LOCALHOST_API_URL=http://192.168.1.117:5000
 VITE_LOCALHOST_API_WITH_PREFIX=http://192.168.1.117:5000/api
