feat: add EmployeeLeaveBalance and EmployeeLeaveHistory components with leave management functionality

--- a/.env
+++ b/.env
@@ -1,18 +1,30 @@
-# Use mock server for development
-# VITE_USE_MOCK=true
+# Environment Configuration for Frontend
+# Update these URLs to match your deployment environment
 
-# Set to false to use your actual backend
+# Use mock server for development (set to true for testing with mock data)
 VITE_USE_MOCK=false
 
-
-# Mock Server URLs
-VITE_MOCK_API_URL=http://192.168.1.117:5000/api
-VITE_MOCK_SERVER_PORT=3002
+# Primary API Configuration
+# Change this to your actual backend server URL
+VITE_API_BASE_URL=http://192.168.1.132:8000/api
 
 # Backend Server URLs
-VITE_BACKEND_BASE_URL=http://192.168.1.117:5000
-VITE_BACKEND_API_URL=http://192.168.1.117:5000/api
+VITE_BACKEND_BASE_URL=http://192.168.1.132:8000
+VITE_BACKEND_API_URL=http://192.168.1.132:8000/api
 
-# Alternative localhost URLs for development
-VITE_LOCALHOST_API_URL=http://192.168.1.117:5000
-VITE_LOCALHOST_API_WITH_PREFIX=http://192.168.1.117:5000/api
+# Mock Server URLs (for development/testing)
+VITE_MOCK_API_URL=http://192.168.1.132:8000/api
+VITE_MOCK_SERVER_PORT=3002
+
+# Alternative Configuration Options
+# Use these if you need different server configurations
+VITE_LOCALHOST_API_URL=http://localhost:8000
+VITE_LOCALHOST_API_WITH_PREFIX=http://localhost:8000/api
+
+# Production URLs (uncomment and modify for production deployment)
+# VITE_PRODUCTION_API_URL=https://your-production-domain.com/api
+# VITE_PRODUCTION_BASE_URL=https://your-production-domain.com
+
+# Development URLs (for local development)
+# VITE_DEV_API_URL=http://127.0.0.1:8000/api
+# VITE_DEV_BASE_URL=http://127.0.0.1:8000
